# dbgflow

./: .gitignore  Cargo.toml  LICENSE  README.md  build_output.txt  demo.txt  fix2.py  loops_session.json  patch_file.py  patch_lib.py  plan.md
.github/agents/: copilot.agent.md
.playwright-mcp/: page-2026-04-05T10-58-15-318Z.yml  page-2026-04-05T11-15-53-438Z.yml  page-2026-04-05T11-16-04-975Z.yml  page-2026-04-05T11-18-20-699Z.yml  page-2026-04-05T11-19-01-881Z.yml
crates/dbg-cli/: Cargo.toml  README.md
crates/dbg-cli/src/: async_demo.rs  lib.rs  main.rs
crates/dbg-core/: Cargo.toml  README.md
crates/dbg-core/src/: future.rs  internal_runtime.rs  lib.rs  server.rs  session.rs  ui.rs
crates/dbg-core/ui/: app.css  app.js  globals.css  index.html
crates/dbg-macros/: Cargo.toml  README.md
crates/dbg-macros/src/: lib.rs
docs/: architecture.md  publishing.md
examples/: async_tracing.rs
examples/pipelines/: Cargo.toml  collections_session.json  error_handling_session.json  network_session.json  pattern_matching_session.json  recursion_session.json  struct_operations_session.json
examples/pipelines/examples/: async_pipelines.rs  collections.rs  error_handling.rs  loops.rs  network_request.rs  pattern_matching.rs  recursion.rs  struct_operations.rs
examples/pipelines/src/: lib.rs
examples/real-project/: Cargo.toml
examples/real-project/artifacts/test-sessions/run-1775322573/: dbg-real-project--tests--counter-pipeline-fails-8712.json  dbg-real-project--tests--counter-pipeline-passes-8712.json
examples/real-project/src/: lib.rs
packaging/homebrew/Formula/: dbg.rb.template  dbgflow.rb.template
web/: build.mjs  components.json  package.json
web/src/: main.jsx  styles.css
web/src/components/: GraphNode.jsx  NodeDetailsPanel.jsx  PlaybackControls.jsx  WorkflowCanvas.jsx  WorkflowEmptyState.jsx
web/src/components/ui/: dropdown-menu.jsx  index.js  scroll-area.jsx  select.jsx  slider.jsx  tooltip.jsx
web/src/hooks/: index.js  useGraphLayout.js  usePlayback.js  useSession.js  useWorkflowModel.js
web/src/store/: index.js  pipelineStore.js  playbackStore.js  sessionStore.js  uiStore.js
web/src/styles/: globals.css
web/src/utils/: api.js  chainUtils.js  constants.js  formatUtils.js  graphUtils.js  index.js
