[workspace]
members = [
    "crates/dbg-core",
    "crates/dbg-macros",
    "crates/dbg-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
homepage = "https://github.com/CbIRNik/dbgflow"
repository = "https://github.com/CbIRNik/dbgflow"

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0.101"
prettyplease = "0.2.37"
quote = "1.0.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0.106", features = ["full"] }
