[package]
name = "dbgflow"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Graph-first Rust debugger library and CLI with trace macros, test capture, and a browser UI."
documentation = "https://docs.rs/dbgflow"
readme = "README.md"
keywords = ["debugger", "trace", "graph", "cli", "rust"]
categories = ["development-tools::debugging", "command-line-utilities"]
default-run = "dbg"

[lib]
name = "dbg"

[[bin]]
name = "dbg"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
clap.workspace = true
dbg-core = { package = "dbgflow-core", path = "../dbg-core", version = "0.1.0" }
dbg-macros = { package = "dbgflow-macros", path = "../dbg-macros", version = "0.1.0" }
